--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -6,13 +6,19 @@
   color: white;
   font-weight: bold;
   font-size: $l-size;
-  margin-bottom: $xl-size;
+  margin-bottom: $m-size;
   padding: 2.4rem;
   width: 100%; // takes advantage of the whole 60rem
 }
 
 .big-button:disabled {
   opacity: 0.5;
+}
+
+@media (min-width: $desktop-breakpoint) {
+  .big-button {
+    margin-bottom: $xl-size;
+  }
 }
 
 // smaller buttons
